native/accelerate-ffi/src/accelerate.rs

unsafe extern "C" {
    pub fn cblas_ssymv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __beta: f32,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ssbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __beta: f32,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_sspmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __Ap: *const f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __beta: f32,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_sger(
        __Order: CBLAS_ORDER,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __Y: *const f32,
        __incY: ::std::os::raw::c_int,
        __A: *mut f32,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ssyr(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __A: *mut f32,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_sspr(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __Ap: *mut f32,
    );
}
unsafe extern "C" {
    pub fn cblas_ssyr2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __Y: *const f32,
        __incY: ::std::os::raw::c_int,
        __A: *mut f32,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_sspr2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __Y: *const f32,
        __incY: ::std::os::raw::c_int,
        __A: *mut f32,
    );
}
unsafe extern "C" {
    pub fn cblas_dsymv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __beta: f64,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dsbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __beta: f64,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dspmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __Ap: *const f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __beta: f64,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dger(
        __Order: CBLAS_ORDER,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __Y: *const f64,
        __incY: ::std::os::raw::c_int,
        __A: *mut f64,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dsyr(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __A: *mut f64,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dspr(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __Ap: *mut f64,
    );
}
unsafe extern "C" {
    pub fn cblas_dsyr2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __Y: *const f64,
        __incY: ::std::os::raw::c_int,
        __A: *mut f64,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dspr2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __Y: *const f64,
        __incY: ::std::os::raw::c_int,
        __A: *mut f64,
    );
}
unsafe extern "C" {
    pub fn cblas_chemv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_chbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_chpmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __Ap: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cgeru(
        __Order: CBLAS_ORDER,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cgerc(
        __Order: CBLAS_ORDER,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cher(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_chpr(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_cher2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_chpr2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __Ap: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_zhemv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zhbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zhpmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __Ap: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zgeru(
        __Order: CBLAS_ORDER,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zgerc(
        __Order: CBLAS_ORDER,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zher(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
